--- a/config/pipeline.train.backtranslation.yml
+++ b/config/pipeline.train.backtranslation.yml
@@ -63,9 +63,6 @@ pipeline:
       vocab_size: ${global.vocab_size}
     - step: train_model
       step_label: train_model.${global.src_lang}-${global.tgt_lang}
-      src_lang: ${global.src_lang}
-      tgt_lang: ${global.tgt_lang}
-      marian_dir: ${global.marian_dir}
       marian_config: ${global.marian_config}
       opustrainer_config: null
       max_epochs: ${global.max_epochs}
@@ -81,7 +78,6 @@ pipeline:
       step_label: train_model.${global.tgt_lang}-${global.src_lang}
       src_lang: ${global.tgt_lang}
       tgt_lang: ${global.src_lang}
-      marian_dir: ${global.marian_dir}
       marian_config: ${global.marian_config}
       opustrainer_config: null
       max_epochs: ${global.max_epochs}
@@ -126,10 +122,7 @@ pipeline:
 
     # Train (iter 2; with bt)
     - step: train_model
-      step_label: tune_bt_model.${global.src_lang}-${global.tgt_lang}
-      src_lang: ${global.src_lang}
-      tgt_lang: ${global.tgt_lang}
-      marian_dir: ${global.marian_dir}
+      step_label: train_bt_model.${global.src_lang}-${global.tgt_lang}
       marian_config: ${global.marian_config}
       opustrainer_config: null
       max_epochs: ${global.max_epochs}
@@ -144,10 +137,9 @@ pipeline:
         - 0.5
         - 0.5
     - step: train_model
-      step_label: tune_bt_model.${global.tgt_lang}-${global.src_lang}
+      step_label: train_bt_model.${global.tgt_lang}-${global.src_lang}
       src_lang: ${global.tgt_lang}
       tgt_lang: ${global.src_lang}
-      marian_dir: ${global.marian_dir}
       marian_config: ${global.marian_config}
       opustrainer_config: null
       max_epochs: ${global.max_epochs}
@@ -166,7 +158,7 @@ pipeline:
     - step: translate
       step_label: translate_test.${global.src_lang}-${global.tgt_lang}
       prev_corpus_step: test.${global.src_lang}-${global.tgt_lang}
-      model_step: tune_bt_model.${global.src_lang}-${global.tgt_lang}
+      model_step: train_bt_model.${global.src_lang}-${global.tgt_lang}
       marian_dir: ${global.marian_dir}
     - step: evaluate
       step_label: evaluate_test.${global.src_lang}-${global.tgt_lang}
@@ -177,7 +169,7 @@ pipeline:
       src_lang: ${global.tgt_lang}
       tgt_lang: ${global.src_lang}
       prev_corpus_step: test.${global.src_lang}-${global.tgt_lang}
-      model_step: tune_bt_model.${global.tgt_lang}-${global.src_lang}
+      model_step: train_bt_model.${global.tgt_lang}-${global.src_lang}
       marian_dir: ${global.marian_dir}
     - step: evaluate
       step_label: evaluate_test.${global.tgt_lang}-${global.src_lang}
