--- a/config/pipeline.train.backtranslation.yml
+++ b/config/pipeline.train.backtranslation.yml
@@ -1,21 +1,23 @@
-global:
+pipeline:
+  pipeline_dir: experiments/${.langpair}/train_only.backtranslation
   seed: 42
-  src_lang: en
-  tgt_lang: nn
 
-  preprocess_pipeline_dir: experiments/${.src_lang}-${.tgt_lang}/preprocess.simple
+  src_lang: en
+  tgt_lang: eu
+  langpair: ${.src_lang}-${.tgt_lang}
+  bt_langpair: ${.tgt_lang}-${.src_lang}
+
+  preprocess_pipeline_dir: experiments/${.langpair}/preprocess.simple
 
   # We set the "raw" data dir to the output of the preprocess pipeline
-  raw_para_dir: ${.preprocess_pipeline_dir}/gather.${.src_lang}-${.tgt_lang}/output
+  raw_para_dir: ${.preprocess_pipeline_dir}/gather.${.langpair}/output
   raw_mono_src_dir: ${.preprocess_pipeline_dir}/gather.${.src_lang}/output
   raw_mono_tgt_dir: ${.preprocess_pipeline_dir}/gather.${.tgt_lang}/output
 
-  valid_data_dir: ${.preprocess_pipeline_dir}/valid.${.src_lang}-${.tgt_lang}/output
-  test_data_dir: ${.preprocess_pipeline_dir}/test.${.src_lang}-${.tgt_lang}/output
+  valid_data_dir: ${.preprocess_pipeline_dir}/valid.${.langpair}/output
+  test_data_dir: ${.preprocess_pipeline_dir}/test.${.langpair}/output
 
-  valid_dataset: flores200.dev.${.src_lang}-${.tgt_lang}
-
-  decontaminate_min_length: 25
+  valid_dataset: flores200.dev.${.langpair}
 
   marian_dir: marian_dir 
   marian_config: config/marian.train.teacher.base.yml
@@ -24,67 +26,51 @@ global:
   shard_size: 10000
   vocab_size: 64000
 
-pipeline:
-  pipeline_dir: experiments/${global.src_lang}-${global.tgt_lang}/train_only.backtranslation
   steps:
     # Load Datasets
     # TODO: implement a "step load" mechanism/step for proper source parameter inheritance
     - step: raw
-      step_label: gather.${global.src_lang}-${global.tgt_lang}
-      src_lang: ${global.src_lang}
-      tgt_lang: ${global.tgt_lang}
-      raw_data_dir: ${global.raw_para_dir}
+      step_label: gather.${pipeline.langpair}
+      raw_data_dir: ${pipeline.raw_para_dir}
     - step: raw
-      step_label: gather.${global.src_lang}
-      src_lang: ${global.src_lang}
-      raw_data_dir: ${global.raw_mono_src_dir}
-      shard_size: ${global.shard_size}
+      step_label: gather.${pipeline.src_lang}
+      src_lang: ${pipeline.src_lang}
+      tgt_lang: null
+      raw_data_dir: ${pipeline.raw_mono_src_dir}
     - step: raw
-      step_label: gather.${global.tgt_lang}
-      src_lang: ${global.tgt_lang}
-      raw_data_dir: ${global.raw_mono_tgt_dir}
-      shard_size: ${global.shard_size}
+      step_label: gather.${pipeline.tgt_lang}
+      src_lang: ${pipeline.tgt_lang}
+      tgt_lang: null
+      raw_data_dir: ${pipeline.raw_mono_tgt_dir}
     - step: raw
-      step_label: valid.${global.src_lang}-${global.tgt_lang}
-      src_lang: ${global.src_lang}
-      tgt_lang: ${global.tgt_lang}
-      raw_data_dir: ${global.valid_data_dir}
+      step_label: valid.${pipeline.langpair}
+      raw_data_dir: ${pipeline.valid_data_dir}
     - step: raw
-      step_label: test.${global.src_lang}-${global.tgt_lang}
-      src_lang: ${global.src_lang}
-      tgt_lang: ${global.tgt_lang}
-      raw_data_dir: ${global.test_data_dir}
+      step_label: test.${pipeline.langpair}
+      raw_data_dir: ${pipeline.test_data_dir}
 
     # Train (iter 1)
     - step: generate_vocab
-      step_label: generate_vocab.${global.src_lang}-${global.tgt_lang}
-      marian_dir: ${global.marian_dir}
-      corpus_step: gather.${global.src_lang}-${global.tgt_lang}
-      vocab_size: ${global.vocab_size}
+      step_label: generate_vocab.${pipeline.langpair}
+      corpus_step: gather.${pipeline.langpair}
     - step: train_model
-      step_label: train_model.${global.src_lang}-${global.tgt_lang}
-      marian_config: ${global.marian_config}
+      step_label: train_model.${pipeline.langpair}
       opustrainer_config: null
-      max_epochs: ${global.max_epochs}
-      vocab_step: generate_vocab.${global.src_lang}-${global.tgt_lang}
-      train_corpus_step: gather.${global.src_lang}-${global.tgt_lang}
-      valid_corpus_step: valid.${global.src_lang}-${global.tgt_lang}
-      valid_dataset: ${global.valid_dataset}
+      vocab_step: generate_vocab.${pipeline.langpair}
+      train_corpus_step: gather.${pipeline.langpair}
+      valid_corpus_step: valid.${pipeline.langpair}
       train_categories:
         - "clean"
       train_category_ratios:
         - 1.0
     - step: train_model
-      step_label: train_model.${global.tgt_lang}-${global.src_lang}
-      src_lang: ${global.tgt_lang}
-      tgt_lang: ${global.src_lang}
-      marian_config: ${global.marian_config}
+      step_label: train_model.${pipeline.bt_langpair}
+      src_lang: ${pipeline.tgt_lang}
+      tgt_lang: ${pipeline.src_lang}
       opustrainer_config: null
-      max_epochs: ${global.max_epochs}
-      vocab_step: generate_vocab.${global.src_lang}-${global.tgt_lang}
-      train_corpus_step: gather.${global.src_lang}-${global.tgt_lang}
-      valid_corpus_step: valid.${global.src_lang}-${global.tgt_lang}
-      valid_dataset: ${global.valid_dataset}
+      vocab_step: generate_vocab.${pipeline.langpair}
+      train_corpus_step: gather.${pipeline.langpair}
+      valid_corpus_step: valid.${pipeline.langpair}
       train_categories:
         - "clean"
       train_category_ratios:
@@ -92,42 +78,36 @@ pipeline:
 
     # Translate "mono" data
     - step: translate
-      step_label: translate.${global.src_lang}-${global.tgt_lang}
-      src_lang: ${global.src_lang}
-      tgt_lang: ${global.tgt_lang}
-      prev_corpus_step: gather.${global.src_lang}
-      model_step: train_model.${global.src_lang}-${global.tgt_lang}
+      step_label: translate.${pipeline.langpair}
+      prev_corpus_step: gather.${pipeline.src_lang}
+      model_step: train_model.${pipeline.langpair}
     - step: translate
-      step_label: translate.${global.tgt_lang}-${global.src_lang}
-      src_lang: ${global.tgt_lang}
-      tgt_lang: ${global.src_lang}
-      prev_corpus_step: gather.${global.tgt_lang}
-      model_step: train_model.${global.tgt_lang}-${global.src_lang}
+      step_label: translate.${pipeline.bt_langpair}
+      src_lang: ${pipeline.tgt_lang}
+      tgt_lang: ${pipeline.src_lang}
+      prev_corpus_step: gather.${pipeline.tgt_lang}
+      model_step: train_model.${pipeline.bt_langpair}
     - step: merge
-      step_label: merge.${global.src_lang}-${global.tgt_lang}
-      prev_corpus_step: gather.${global.src_lang}-${global.tgt_lang}
+      step_label: merge.${pipeline.langpair}
+      prev_corpus_step: gather.${pipeline.langpair}
       prev_corpus_label: organic
-      other_corpus_step: translate.${global.tgt_lang}-${global.src_lang}
+      other_corpus_step: translate.${pipeline.bt_langpair}
       other_corpus_label: synthetic
     - step: merge
-      step_label: merge.${global.tgt_lang}-${global.src_lang}
-      src_lang: ${global.tgt_lang}
-      tgt_lang: ${global.src_lang}
-      prev_corpus_step: gather.${global.src_lang}-${global.tgt_lang}
+      step_label: merge.${pipeline.bt_langpair}
+      src_lang: ${pipeline.tgt_lang}
+      tgt_lang: ${pipeline.src_lang}
+      prev_corpus_step: gather.${pipeline.langpair}
       prev_corpus_label: organic
-      other_corpus_step: translate.${global.src_lang}-${global.tgt_lang}
+      other_corpus_step: translate.${pipeline.lnagpair}
       other_corpus_label: synthetic
 
     # Train (iter 2; with bt)
     - step: train_model
-      step_label: train_bt_model.${global.src_lang}-${global.tgt_lang}
-      marian_config: ${global.marian_config}
+      step_label: train_bt_model.${pipeline.langpair}
       opustrainer_config: null
-      max_epochs: ${global.max_epochs}
-      vocab_step: generate_vocab.${global.src_lang}-${global.tgt_lang}
-      train_corpus_step: merge.${global.src_lang}-${global.tgt_lang}
-      valid_corpus_step: valid.${global.src_lang}-${global.tgt_lang}
-      valid_dataset: ${global.valid_dataset}
+      train_corpus_step: merge.${pipeline.langpair}
+      valid_corpus_step: valid.${pipeline.langpair}
       train_categories:
         - "synthetic.clean"
         - "organic.clean"
@@ -135,16 +115,12 @@ pipeline:
         - 0.5
         - 0.5
     - step: train_model
-      step_label: train_bt_model.${global.tgt_lang}-${global.src_lang}
-      src_lang: ${global.tgt_lang}
-      tgt_lang: ${global.src_lang}
-      marian_config: ${global.marian_config}
+      step_label: train_bt_model.${pipeline.bt_langpair}
+      src_lang: ${pipeline.tgt_lang}
+      tgt_lang: ${pipeline.src_lang}
       opustrainer_config: null
-      max_epochs: ${global.max_epochs}
-      vocab_step: generate_vocab.${global.src_lang}-${global.tgt_lang}
-      train_corpus_step: merge.${global.tgt_lang}-${global.src_lang}
-      valid_corpus_step: valid.${global.src_lang}-${global.tgt_lang}
-      valid_dataset: ${global.valid_dataset}
+      train_corpus_step: merge.${pipeline.bt_langpair}
+      valid_corpus_step: valid.${pipeline.langpair}
       train_categories:
         - "synthetic.clean"
         - "organic.clean"
@@ -154,24 +130,27 @@ pipeline:
 
     # Eval (iter 2)
     - step: translate
-      step_label: translate_test.${global.src_lang}-${global.tgt_lang}
-      prev_corpus_step: test.${global.src_lang}-${global.tgt_lang}
-      model_step: train_bt_model.${global.src_lang}-${global.tgt_lang}
+      step_label: translate_test.${pipeline.langpair}
+      prev_corpus_step: test.${pipeline.langpair}
+      model_step: train_bt_model.${pipeline.langpair}
     - step: evaluate
-      step_label: evaluate_test.${global.src_lang}-${global.tgt_lang}
-      translated_corpus_step: translate_test.${global.src_lang}-${global.tgt_lang}
-      reference_corpus_step: test.${global.src_lang}-${global.tgt_lang}
+      step_label: evaluate_test.${pipeline.langpair}
+      translated_corpus_step: translate_test.${pipeline.langpair}
+      reference_corpus_step: test.${pipeline.langpair}
     - step: translate
-      step_label: translate_test.${global.tgt_lang}-${global.src_lang}
-      src_lang: ${global.tgt_lang}
-      tgt_lang: ${global.src_lang}
-      prev_corpus_step: test.${global.src_lang}-${global.tgt_lang}
-      model_step: train_bt_model.${global.tgt_lang}-${global.src_lang}
+      step_label: translate_test.${pipeline.bt_langpair}
+      src_lang: ${pipeline.tgt_lang}
+      tgt_lang: ${pipeline.src_lang}
+      prev_corpus_step: test.${pipeline.langpair}
+      model_step: train_bt_model.${pipeline.bt_langpair}
     - step: evaluate
-      step_label: evaluate_test.${global.tgt_lang}-${global.src_lang}
-      translated_corpus_step: translate_test.${global.tgt_lang}-${global.src_lang}
-      reference_corpus_step: test.${global.src_lang}-${global.tgt_lang}
+      step_label: evaluate_test.${pipeline.bt_langpair}
+      translated_corpus_step: translate_test.${pipeline.bt_langpair}
+      reference_corpus_step: test.${pipeline.langpair}
 
   targets:
-    - evaluate_test.${global.src_lang}-${global.tgt_lang}
-    - evaluate_test.${global.tgt_lang}-${global.src_lang}
+    - evaluate_test.${pipeline.langpair}
+    - evaluate_test.${pipeline.bt_langpair}
+
+runner:
+  runner: bash
