--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,16 @@
+Cython
+numpy
 attrs
+bicleaner
+bifixer==0.8.9
+fugashi[unidic-lite]==1.1.2
+git+https://github.com/Helsinki-NLP/OpusFilter.git@develop
+hanziconv==0.3.2
 more_itertools
+mtdata==0.4.0
 omegaconf
-opustrainer==0.2
+opuscleaner==0.4.0
+opustrainer==0.3
 psutil
 pycld2==0.41
 requests
@@ -9,3 +18,4 @@ sacrebleu
 sacremoses
 spacy-pkuseg
 typing-extensions
+wget>=3.2
