--- a/config/01-pipeline.bidirectional.yml
+++ b/config/01-pipeline.bidirectional.yml
@@ -9,9 +9,12 @@ pipeline:
   pipeline_dir: experiments/${.langpair}/pipeline.bidirectional
   data_root_dir: data/${.langpair}
 
+  # Vocabulary and model training globals
   vocab_size: 64000
   marian_dir: marian
   marian_config: config/marian.train.teacher.base.yml
+
+  # Model training globals
   opustrainer_config: null
   max_epochs: null
   valid_dataset: flores200.dev.${.langpair}
