--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,9 @@ Documentation = "https://github.com/hplt-project/opuspocus#readme"
 Issues = "https://github.com/hplt-project/opuspocus/issues"
 Repository = "https://github.com/hplt-project/OpusPocus.git"
 
+[tool.setuptools]
+py-modules = ["opuspocus"]
+
 [tool.pytest.ini_options]
 log_cli = true
 log_level = "INFO"
