--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,16 +17,16 @@ jobs:
       - uses: actions/setup-python@v3
 
       - name: Build sdist
-        run: pipx run build --sdist
+        run: pipx run build . --sdist
         
       - name: Set version number
         if: startsWith(github.ref, 'refs/tags/v')
-        run: echo "VERSION = \"${GITHUB_REF_NAME:1}\"" > opuspocus/__about__.py
+        run: echo "VERSION = \"${GITHUB_REF_NAME:1}\"" > ./opuspocus/__about__.py
 
       - uses: actions/upload-artifact@v4
         with:
           name: build-sdist
-          path: dist/opuspocus*.tar.gz
+          path: ./dist/opuspocus*.tar.gz
 
   build_wheels:
     name: Build wheels
@@ -68,13 +68,13 @@ jobs:
       - uses: actions/download-artifact@v4
         with:
           name: build-sdist
-          path: dist
+          path: ./dist
 
       - name: Install
-        run: python3 -m pip install dist/opuspocus*.whl
+        run: python3 -m pip install ./dist/opuspocus*.whl
 
       - name: Run pytest
-        run: python3 -m pytest -s -v tests/
+        run: python3 -m pytest -s -v ./tests/
 
   upload_pypi:
     needs: [build_wheels, build_sdist, run_tests]
@@ -89,7 +89,7 @@ jobs:
       - uses: actions/download-artifact@v4
         with:
           name: build-sdist
-          path: dist
+          path: ./dist
   
       - uses: pypa/gh-action-pypi-publish@v1.5.0
         with:
