--- a/requirements-all.txt
+++ b/requirements-all.txt
@@ -1,4 +1,15 @@
-pre-commit
-pytest
-pytest-timeout
-ruff
+attrs==24.2.0
+flake8==7.1.0
+more-itertools==10.2.0
+omegaconf==2.3.0
+opuscleaner==0.4.0
+opustrainer==0.3
+psutil==5.9.8
+pycld2==0.41
+pytest==8.2.2
+pytest-cov==5.0.0
+pytest-timeout==2.4.0
+PyYAML==6.0.1
+sacrebleu==2.4.2
+sacremoses==0.1.0
+typing_extensions==4.12.0
