--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,11 @@
-Cython
-numpy
-attrs
-bicleaner
-bifixer==0.8.9
-fugashi[unidic-lite]==1.1.2
-git+https://github.com/Helsinki-NLP/OpusFilter.git@develop
-hanziconv==0.3.2
-more_itertools
-mtdata==0.4.0
-omegaconf
+attrs==24.2.0
+more-itertools==10.2.0
+omegaconf==2.3.0
 opuscleaner==0.4.0
 opustrainer==0.3
-psutil
+psutil==5.9.8
 pycld2==0.41
-requests
-sacrebleu
-sacremoses
-spacy-pkuseg
-typing-extensions
-wget>=3.2
+PyYAML==6.0.1
+sacrebleu==2.4.2
+sacremoses==0.1.0
+typing_extensions==4.12.0
